--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 }
 
 .container{
-    padding: 10px 10%;
+    padding: 22px 10%;
 }
 
 nav{
@@ -28,8 +28,19 @@ nav{
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    
 }
-
+nav ul{
+    background-color: red;
+    font-size: 22px;
+    border-radius: 3px;
+}
+nav ul li:hover{
+    background-color: white;
+}
+nav ul li:hover a{
+    color: red;
+}
 .logo{
     width: 140px;
 
@@ -37,14 +48,16 @@ nav{
 nav ul li{
     display: inline-block;
     list-style: none;
-    margin: 10px 20px;
+    padding: 10px;
 }
 
 nav ul li a{
     color: #fff;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 20px;
     position: relative;
+    /* padding: 10px 20px; */
+    padding: 0 12px ;
 }
 
 nav ul li a::after{
@@ -63,6 +76,11 @@ nav ul li a:hover::after{
 
 }
 
+.container:hover::after{
+    width: 100%;
+
+}
+
 .header-text{
     margin-top: 20%;
     font-size: 30px;
@@ -70,6 +88,13 @@ nav ul li a:hover::after{
 .header-text h1{
     font-size: 60px;
     margin-top: 20px;
+    
+}
+.header-text h6{
+    margin-top: 12px;
+}
+.header-text p{
+    color: #ababab;
 }
 
 .header-text h1 span{
