--- a/style.css
+++ b/style.css
@@ -378,6 +378,9 @@ form .btn2{
 }
 
 /* ----------Responsiveness---------- */
+nav .fa-solid {
+    display: none;
+}
 
 @media only screen and (max-width: 600px){
     #header{
@@ -390,4 +393,30 @@ form .btn2{
     .header-text h1{
         font-size: 30px;
     }
+    nav .fa-solid{
+        display: block;
+        font-size: 25px;
+    }
+    nav ul{
+        background: #ff004f;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+
+    }
+    nav ul li{
+        display: block;
+        margin: 25px;
+    }
+    nav ul .fa-solid{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+    } 
 }
