--- a/style.css
+++ b/style.css
@@ -461,3 +461,9 @@ nav .fa-solid {
         line-height: 30px;
     }
 }
+
+#msg{
+    color: #61b752;
+    margin-top: -40px;
+    display: block;
+}
