--- a/style.css
+++ b/style.css
@@ -12,6 +12,35 @@ body{
     background: #080808;
     color: #fff;
 
+
+}
+
+nav #btn3{
+    margin-top: 50px;
+    margin-left: 0;
+}
+
+.front-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: -300px;
+    margin-left: 60%;
+}
+
+.image1 {
+    width: 400px; /* Adjust size as needed */
+    height: 400px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 5px solid #fff; /* Optional: Adds a white border */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transition: transform 0.5s ease-in-out, box-shadow 0.4s ease-in-out;
+}
+
+.image1:hover {
+    transform: scale(1.1); /* Slight rotation and zoom */
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
 }
 
 #header{
@@ -46,7 +75,7 @@ nav ul li:hover a{
     color: red;
 }
 .logo{
-    width: 140px;
+    width: 200px;
 
 }
 nav ul li{
@@ -86,7 +115,7 @@ nav ul li a:hover::after{
 }
 
 .header-text{
-    margin-top: 20%;
+    margin-top: 12.5%;
     font-size: 30px;
 }
 .header-text h1{
@@ -401,7 +430,7 @@ nav .fa-solid {
         background-image: url();
     }
     .header-text{
-        margin-top: 100%;
+        margin-top: 130%;
         font-size: 16px;
     }
     .header-text h1{
@@ -410,6 +439,21 @@ nav .fa-solid {
     nav .fa-solid{
         display: block;
         font-size: 25px;
+    }
+    #btn3{
+        display: none;
+    }
+    .image1{
+        height: 300px;
+        width: 300px;
+    }
+    .front-image{
+        align-items: center;
+        justify-content: center;
+        margin-top: -500px;
+        display: flex;
+        margin-left: 0;
+        
     }
     nav ul{
         background: #ff004f;
